--- a/todo.css
+++ b/todo.css
@@ -32,28 +32,38 @@ h1 {
   border: 1px solid red;
   width: 80%;
   height: 80%;
+  padding-block: 2%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
-.input-grid,
-.task-grid {
+.input-wrapper {
   border: 1px solid red;
   width: 90%;
-  display: grid;
-  justify-content: center;
+  margin-bottom: 2%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  grid-template-columns: 40% 30% 30%;
-  grid-template-rows: auto;
   gap: 1%;
 }
 
-.input-grid {
-  margin-bottom: 2%;
+.task-wrapper {
+  border: 1px solid red;
+  width: 90%;
+  display: grid;
+  grid-template-rows: auto;
+  row-gap: 2rem;
 }
 
-.task-grid {
-  height: 80%;
+.task {
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-name-date {
+  display: flex;
+  flex-direction: column;
 }
